--- a/style.css
+++ b/style.css
@@ -13,17 +13,32 @@ body {
 }
 
 /* Utilities */
-#theme-toggle {
+#dark-theme,
+#light-theme {
     width: 8%;
     height: 8%;
     cursor: pointer;
+}
+
+#light-theme {
+    opacity: 0;
+    position: absolute;
+    right: 5%;
+}
+
+.dark-icon {
+    opacity: 0;
+}
+
+.light-icon {
+    opacity: 1;
 }
 
 /* Background for light*/
 .bg {
     background: url('images/bg-mobile-light.jpg') no-repeat;
     background-size: cover;
-    height: 60vw;
+    height: 60%;
     padding: 15% 5%;
 }
 
@@ -42,15 +57,19 @@ body {
 #task-input {
     border:none;
     border-radius: 5px;
-    padding: 5% 5%;
+    padding: 1.5em;
     width: 100%;
     margin: 7% 0;
+}
+
+#task-input:focus {
+    outline: none;
 }
 
 /* List of items */
 #todo-list {
     position: absolute;
-    top: 90%;
+    top: 80%;
     width:90%;
     margin: 0 5%;
     background-color: #fff;
@@ -60,6 +79,7 @@ body {
 
 /* Individual item */
 .item {
+    position: relative;
     list-style-type: none;
     color: hsl(235, 19%, 35%);
     border-bottom: 1px solid hsl(233, 11%, 84%);
@@ -121,9 +141,30 @@ input[type="checkbox"]:checked + label{
 /* Desktop */
 @media (min-width:1440px) {
     /* Background */
-    .bg-light {
+    .bg {
         background: url('images/bg-desktop-light.jpg') no-repeat;
-        background-size: cover;
-        height: 20vw;
+        background-size: 100vw 40vh;
+        position: relative;
+    }
+
+    .todo-main {
+        width: 45%;
+        margin: -5% 28%;
+    }
+
+    #task-input {
+        position: absolute;
+        margin:0 25%;
+        width: 40%;
+        top: 50%;
+    }
+
+    #todo-list {
+        width: 45%;
+        margin: -5% 27%;
+    }
+
+    .item {
+        margin: 0;
     }
 }
